# rhalphalib

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  _plot_TF.py  _plot_cov.py  _plot_fractions.py  bkgEstTests.py  config_Hxx.py  genindex.html  index.html  input_shapes.py  introduction.html  make_Hbb.py  make_Hxx.py  model.py  noxfile.py  objects.inv  parameter.py  plot.py  plotTF.py  plotTF2.py  process.py  py-modindex.html  pyproject.toml  sample.py  search.html  searchindex.js  setup.py  temp_3reg.py  temp_Hxx.py  template_morph.py  test_rhalphalib.py  utils.py
.doctrees/: environment.pickle  index.doctree  introduction.doctree
.doctrees/api/: rhalphalib.doctree  rhalphalib.plot.doctree
2016/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root  templatesCC.root
2016v2/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root  templatesCC.root
2017/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root
2017v2/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root
2018/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root  templatesCC.root
2018v2/: hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root  templatesCC.root
_sources/: introduction.ipynb.txt
_static/: documentation_options.js
api/: rhalphalib.html  rhalphalib.plot.html
docs/: conf.py  index.md
hxx/: hist_1DZbb_muonCR.root  hist_1DZbb_pt_scalesmear.root  hist_1DZcc_muonCR.root  hist_1DZcc_pt_scalesmear.root
rhalphalib/: __init__.py  function.py  model.py  parameter.py  sample.py  template_morph.py  util.py
tests/: test_rhalphalib.py
(+20 files in other folders)
